--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/axios": "^0.14.0",
     "axios": "^1.5.0",
     "isbot": "^3.6.8",
+    "marked-react": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.5.0",
