--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "remix dev",
     "start": "remix-serve build",
     "typecheck": "tsc",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "vercel-build": "prisma generate && prisma migrate deploy && remix build"
   },
   "dependencies": {
+    "@prisma/client": "5.2.0",
     "@remix-run/css-bundle": "^1.19.3",
     "@remix-run/node": "^1.19.3",
     "@remix-run/react": "^1.19.3",
@@ -20,8 +22,10 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-turnstile": "^1.1.1",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.4"
+    "semantic-ui-react": "^2.1.4",
+    "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.19.3",
@@ -31,6 +35,7 @@
     "@types/react-dom": "^18.0.11",
     "eslint": "^8.38.0",
     "prettier": "3.0.3",
+    "prisma": "^5.2.0",
     "typescript": "^5.0.4"
   },
   "engines": {
