--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "isbot": "^3.6.8",
     "marked-react": "^2.0.0",
+    "nprogress": "^0.2.0",
     "prism-markdown": "link:prismjs/components/prism-markdown",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@remix-run/dev": "^1.19.3",
     "@remix-run/eslint-config": "^1.19.3",
+    "@types/nprogress": "^0.2.0",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
