--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "start": "remix-serve build",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "vercel-build": "prisma generate && prisma migrate deploy && remix build"
+    "vercel-build": "remix build",
+    "aws-build": "./awsbuild.sh",
+    "aws-deploy-stg": "pnpm aws-build && pnpm arc deploy",
+    "aws-deploy-production": "pnpm aws-build && pnpm arc deploy --production"
   },
   "dependencies": {
-    "@prisma/client": "5.4.2",
+    "@remix-run/architect": "^2.1.0",
     "@remix-run/css-bundle": "^2.1.0",
+    "@remix-run/express": "^2.1.0",
     "@remix-run/node": "^2.1.0",
     "@remix-run/react": "^2.1.0",
     "@remix-run/serve": "^2.1.0",
     "axios": "^1.5.1",
+    "express": "^4.18.2",
     "isbot": "^3.7.0",
     "marked-react": "^2.0.0",
     "nprogress": "^0.2.0",
@@ -30,6 +35,8 @@
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
+    "@architect/architect": "^10.14.2",
+    "@architect/plugin-remix": "^0.2.3",
     "@remix-run/dev": "^2.1.0",
     "@remix-run/eslint-config": "^2.1.0",
     "@types/nprogress": "^0.2.2",
@@ -38,7 +45,6 @@
     "@types/react-dom": "^18.2.14",
     "eslint": "^8.52.0",
     "prettier": "3.0.3",
-    "prisma": "^5.4.2",
     "typescript": "^5.2.2"
   },
   "engines": {
