--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --write .",
     "vercel-build": "remix build",
     "aws-build": "./awsbuild.sh",
+    "aws-preview": "arc sandbox",
     "aws-deploy-stg": "pnpm aws-build && pnpm arc deploy",
     "aws-deploy-production": "pnpm aws-build && pnpm arc deploy --production"
   },
@@ -47,6 +48,6 @@
     "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 }
