--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "recharts": "^2.10.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
+    "swr": "^2.2.5",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
