--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@remix-run/react": "^2.3.1",
     "@remix-run/serve": "^2.4.0",
     "axios": "^1.6.1",
+    "date-fns": "^3.3.1",
     "express": "^4.18.2",
     "isbot": "^3.7.1",
     "marked-react": "^2.0.0",
@@ -28,6 +29,7 @@
     "prism-markdown": "link:prismjs/components/prism-markdown",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-turnstile": "^1.1.2",
     "recharts": "^2.10.3",
@@ -43,6 +45,7 @@
     "@types/nprogress": "^0.2.2",
     "@types/prismjs": "^1.26.3",
     "@types/react": "^18.2.45",
+    "@types/react-datepicker": "^6.0.1",
     "@types/react-dom": "^18.2.18",
     "eslint": "^8.55.0",
     "prettier": "3.1.0",
