--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-deploy-production": "pnpm aws-build && pnpm arc deploy --production"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@remix-run/architect": "^2.8.1",
     "@remix-run/css-bundle": "^2.8.1",
     "@remix-run/express": "^2.8.1",
