--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "aws-deploy-production": "pnpm aws-build && pnpm arc deploy --production"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@remix-run/architect": "^2.8.1",
     "@remix-run/css-bundle": "^2.8.1",
     "@remix-run/express": "^2.8.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
+    "awesome-qr": "2.1.5-rc.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "html2canvas": "^1.4.1",
     "isbot": "^5.1.4",
     "marked-react": "^2.0.0",
     "nprogress": "^0.2.0",
@@ -36,7 +39,8 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "swr": "^2.2.5",
-    "tiny-invariant": "^1.3.3"
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@architect/architect": "^10.16.3",
