--- a/package.json
+++ b/package.json
@@ -7,56 +7,57 @@
     "start": "remix-serve ./build/index.js",
     "typecheck": "tsc",
     "format": "prettier --write .",
-    "vercel-build": "remix build",
-    "aws-build": "./awsbuild.sh",
-    "aws-preview": "arc sandbox",
-    "aws-deploy-stg": "pnpm aws-build && pnpm arc deploy",
-    "aws-deploy-production": "pnpm aws-build && pnpm arc deploy --production"
+    "vercel-build": "remix build"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
-    "@remix-run/architect": "^2.8.1",
-    "@remix-run/css-bundle": "^2.8.1",
-    "@remix-run/express": "^2.8.1",
-    "@remix-run/node": "^2.8.1",
-    "@remix-run/react": "^2.8.1",
-    "@remix-run/serve": "^2.8.1",
+    "@remix-run/css-bundle": "^2.9.2",
+    "@remix-run/express": "^2.9.2",
+    "@remix-run/node": "^2.9.2",
+    "@remix-run/react": "^2.9.2",
+    "@remix-run/serve": "^2.9.2",
     "awesome-qr": "2.1.5-rc.0",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
-    "isbot": "^5.1.4",
+    "isbot": "^5.1.9",
     "marked-react": "^2.0.0",
     "nprogress": "^0.2.0",
     "prism-markdown": "link:prismjs/components/prism-markdown",
     "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-datepicker": "^6.7.1",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-datepicker": "^7.0.0",
+    "react-dom": "^18.3.1",
     "react-turnstile": "^1.1.3",
-    "recharts": "^2.12.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "swr": "^2.2.5",
     "tiny-invariant": "^1.3.3",
-    "zod": "^3.23.4"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@architect/architect": "^10.16.3",
-    "@remix-run/dev": "^2.8.1",
-    "@remix-run/eslint-config": "^2.8.1",
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.5.0",
+    "@remix-run/dev": "^2.9.2",
+    "@remix-run/eslint-config": "^2.9.2",
+    "@stylistic/eslint-plugin-ts": "^2.2.0",
     "@types/nprogress": "^0.2.3",
-    "@types/prismjs": "^1.26.3",
-    "@types/react": "^18.2.78",
+    "@types/prismjs": "^1.26.4",
+    "@types/react": "^18.3.3",
     "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.25",
-    "eslint": "^8.57.0",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.4.0",
     "prettier": "3.1.0",
+    "prettier-eslint": "^16.3.0",
     "typescript": "^5.4.5"
   },
   "engines": {
-    "node": ">=18.0.0"
-  },
-  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
+    "node": ">=20.0.0"
+  }
 }
