--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,60 +2,64 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "start": "remix-serve ./build/index.js",
+    "dev": "remix vite:dev",
+    "build": "remix vite:build",
+    "start": "remix-serve ./build/server/index.js",
     "typecheck": "tsc",
     "format": "prettier --write .",
     "vercel-build": "remix build"
   },
+  "type": "module",
   "dependencies": {
-    "@react-spring/web": "^9.7.3",
-    "@remix-run/css-bundle": "^2.9.2",
-    "@remix-run/express": "^2.9.2",
-    "@remix-run/node": "^2.9.2",
-    "@remix-run/react": "^2.9.2",
-    "@remix-run/serve": "^2.9.2",
+    "@react-spring/web": "^9.7.4",
+    "@remix-run/express": "^2.10.3",
+    "@remix-run/node": "^2.10.3",
+    "@remix-run/react": "^2.10.3",
+    "@remix-run/serve": "^2.10.3",
     "awesome-qr": "2.1.5-rc.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
-    "isbot": "^5.1.9",
+    "isbot": "^5.1.13",
     "marked-react": "^2.0.0",
     "nprogress": "^0.2.0",
-    "prism-markdown": "link:prismjs/components/prism-markdown",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
-    "react-datepicker": "^7.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-turnstile": "^1.1.3",
+    "remix-utils": "^7.6.0",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
+    "semantic-ui-react": "^3.0.0-beta.2",
     "swr": "^2.2.5",
+    "systemjs": "^6.15.1",
     "tiny-invariant": "^1.3.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.1.0",
-    "@eslint/js": "^9.5.0",
-    "@remix-run/dev": "^2.9.2",
-    "@remix-run/eslint-config": "^2.9.2",
-    "@stylistic/eslint-plugin-ts": "^2.2.0",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/js": "^9.8.0",
+    "@remix-run/dev": "^2.10.3",
+    "@remix-run/eslint-config": "^2.10.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@stylistic/eslint-plugin-ts": "^2.3.0",
     "@types/nprogress": "^0.2.3",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
-    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.2",
-    "globals": "^15.4.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.8.0",
     "prettier": "3.1.0",
     "prettier-eslint": "^16.3.0",
-    "typescript": "^5.4.5"
+    "rollup": "^4.19.0",
+    "terser": "^5.31.3",
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5"
   },
   "engines": {
     "node": ">=20.0.0"
