--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@remix-run/serve": "^2.10.3",
     "awesome-qr": "2.1.5-rc.0",
     "axios": "^1.7.2",
+    "cytoscape": "^3.30.2",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "html2canvas": "^1.4.1",
@@ -44,9 +45,11 @@
     "@remix-run/eslint-config": "^2.10.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@stylistic/eslint-plugin-ts": "^2.3.0",
+    "@types/cytoscape": "^3.21.5",
     "@types/nprogress": "^0.2.3",
     "@types/prismjs": "^1.26.4",
     "@types/react": "^18.3.3",
+    "@types/react-cytoscapejs": "^1.2.5",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vercel/remix": "^2.10.3",
