--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^2.10.3",
     "@remix-run/react": "^2.10.3",
     "@remix-run/serve": "^2.10.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "awesome-qr": "2.1.5-rc.0",
     "axios": "^1.7.2",
     "cytoscape": "^3.30.2",
@@ -26,6 +27,7 @@
     "marked-react": "^2.0.0",
     "nprogress": "^0.2.0",
     "prismjs": "^1.29.0",
+    "random": "^5.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
