--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -17,7 +17,7 @@
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true,
-    "types": ["@remix-run/node", "vite/client"],
+    "types": ["@remix-run/node", "vite/client", "unplugin-icons/types/react"],
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "Bundler"
