--- a/packages/web-new/package.json
+++ b/packages/web-new/package.json
@@ -20,6 +20,7 @@
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/cytoscape": "^3.21.8",
 		"@types/eslint": "^9.6.0",
+		"@types/html-minifier": "^4.0.5",
 		"@types/markdown-it": "^14.1.2",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.10",
@@ -27,6 +28,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"html-minifier": "^4.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
