--- a/packages/web-new/package.json
+++ b/packages/web-new/package.json
@@ -46,6 +46,7 @@
 		"@zerodevx/svelte-json-view": "^1.0.11",
 		"awesome-qr": "2.1.5-rc.0",
 		"cytoscape": "^3.30.2",
+		"html2canvas-pro": "^1.5.8",
 		"markdown-it": "^14.1.0",
 		"mode-watcher": "^0.4.1",
 		"svelty-picker": "^5.2.9"
