--- a/package.json
+++ b/package.json
@@ -7,6 +7,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "AGPL-3.0-only",
-  "packageManager": "pnpm@9.12.0+sha512.4abf725084d7bcbafbd728bfc7bee61f2f791f977fd87542b3579dcb23504d170d46337945e4c66485cd12d588a0c0e570ed9c477e7ccdd8507cf05f3f92eaca"
+  "license": "AGPL-3.0-only"
 }
