--- a/packages/web-new/package.json
+++ b/packages/web-new/package.json
@@ -19,6 +19,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/cytoscape": "^3.21.8",
+		"@types/d3": "^7.4.3",
 		"@types/eslint": "^9.6.0",
 		"@types/html-minifier": "^4.0.5",
 		"@types/markdown-it": "^14.1.2",
@@ -46,6 +47,7 @@
 		"@zerodevx/svelte-json-view": "^1.0.11",
 		"awesome-qr": "2.1.5-rc.0",
 		"cytoscape": "^3.30.2",
+		"d3": "^7.9.0",
 		"html2canvas-pro": "^1.5.8",
 		"markdown-it": "^14.1.0",
 		"mode-watcher": "^0.4.1",
