--- a/packages/web-new/package.json
+++ b/packages/web-new/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.14",
+		"@types/chance": "^1.1.6",
 		"@types/cytoscape": "^3.21.8",
 		"@types/d3": "^7.4.3",
 		"@types/eslint": "^9.6.0",
@@ -46,6 +47,7 @@
 		"@tanstack/svelte-query": "^5.56.2",
 		"@zerodevx/svelte-json-view": "^1.0.11",
 		"awesome-qr": "2.1.5-rc.0",
+		"chance": "^1.1.12",
 		"cytoscape": "^3.30.2",
 		"d3": "^7.9.0",
 		"html2canvas-pro": "^1.5.8",
